--- a/wall-e-GUI/wall-e-GUI/views/tranfer.view.html
+++ b/wall-e-GUI/wall-e-GUI/views/tranfer.view.html
@@ -1,1 +1,56 @@
-﻿
+﻿<div>
+
+    <h1>โอนเงิน</h1>
+    <form>
+        <div class="row">
+            <div class="col-md-6">
+
+                <label id="label_balance">บัญชีผู้โอน</label>
+            </div>
+
+            <div class="col-md-6">
+                <label id="label_balance">123-4567-89-0</label>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+
+            <label id="label_balance">บัญชีผู้รับโอน</label>
+            </div>
+
+            <div class="col-md-6">
+            <input id="btn_account_no_tranfer" />
+            </div>
+
+
+        </div>
+        <div class="row">
+
+            <div class="col-md-6">
+
+            <label id="label_balance">จำนวนเงินที่โอน</label>
+            </div>
+
+            <div class="col-md-6">
+            <input id="btn_money" />
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+
+
+            </div>
+
+            <div class="col-md-6">
+                <button class="btn btn-default" id="btn_cancel">ยกเลิก</button>
+                <button class="btn btn-primary" id="btn_ok">ตกลง</button>
+            </div>
+
+        </div>
+
+    </form>
+</div>
+
+
