--- a/wall-e-GUI/wall-e-GUI/views/balance.view.html
+++ b/wall-e-GUI/wall-e-GUI/views/balance.view.html
@@ -1,1 +1,27 @@
-﻿
+﻿<div class="row">
+
+    <h1>เช็คยอดเงิน</h1>
+    <div class="col-md-6">
+       
+        <label>บัญชี</label>
+        <label id="label_balance">123-4567-89-0</label>
+    </div>
+
+    <div class="col-md-6">
+        <label id="label_amount">5,000 บาท</label>
+    </div>
+
+</div>
+
+
+<div class="row">
+
+    <div class="col-md-6">
+
+     
+    </div>
+    <div class="col-md-6">
+        <label id="label_status"></label>
+    </div>
+
+</div>
