check balance ok

--- a/wall-e-GUI/wall-e-GUI/views/balance.view.html
+++ b/wall-e-GUI/wall-e-GUI/views/balance.view.html
@@ -4,11 +4,11 @@
     <div class="col-md-6">
        
         <label>บัญชี</label>
-        <label id="label_balance">123-4567-89-0</label>
+        <label id="label_id">123-4567-89-0</label>
     </div>
 
     <div class="col-md-6">
-        <label id="label_amount">5,000 บาท</label>
+        <label id="label_balance">5,000 บาท</label>
     </div>
 
 </div>
