--- a/wall-e-GUI/wall-e-GUI/views/tranfer.view.html
+++ b/wall-e-GUI/wall-e-GUI/views/tranfer.view.html
@@ -1,7 +1,7 @@
 ﻿<div>
 
     <h1>โอนเงิน</h1>
-    <form>
+
         <div class="row">
             <div class="col-md-6">
 
@@ -9,7 +9,7 @@
             </div>
 
             <div class="col-md-6">
-                <label id="label_balance">123-4567-89-0</label>
+                <label id="label_id">123-4567-89-0</label>
             </div>
 
         </div>
@@ -20,7 +20,7 @@
             </div>
 
             <div class="col-md-6">
-            <input id="btn_account_no_tranfer" />
+            <input id="account_no_tranfer" />
             </div>
 
 
@@ -33,7 +33,7 @@
             </div>
 
             <div class="col-md-6">
-            <input id="btn_money" />
+            <input id="balane_tranfer" />
             </div>
 
         </div>
@@ -50,7 +50,7 @@
 
         </div>
 
-    </form>
+
 </div>
 
 
