tranfer and result view

--- a/wall-e-GUI/wall-e-GUI/views/result.view.html
+++ b/wall-e-GUI/wall-e-GUI/views/result.view.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="col-md-6">
-                <label id="label_balance">123-4567-89-0</label>
+                <label id="label_money">123-4567-89-0</label>
             </div>
 
         </div>
@@ -54,7 +54,7 @@
 </div>
 
 
-<div>
+<!--<div>
 
     <h1>โอนเงิน</h1>
     <form>
@@ -107,6 +107,6 @@
         </div>
 
     </form>
-</div>
+</div>-->
 
 
